kotlin-parser/src/test/semlang/validatorTests/fail/nameConflict1.sem

// Conflict with a native function
function Integer.plus(left: Integer, right: Integer): Integer {
    return Integer."42"
}
